src/deploy/cliente-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cliente-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cliente-service
  template:
    metadata:
      labels:
        app: cliente-service
    spec:
      containers:
        - name: cliente-service
          image: veiculo.azurecr.io/cliente:latest
          ports:
            - containerPort: 80
