src/deploy/cliente-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cliente-veiculo-service
spec:
  selector:
    app: cliente-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
